# faster_profanity

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ef.cpp
include/allowed_characters_loader/: allowed_characters_loader.hpp
include/censor_words_loader/: censor_words_loader.hpp
include/match/: match.hpp
include/node/: node.hpp
include/profane_detector/: profane_detector.hpp
include/state/: state.hpp
include/swear_word_hider/: swear_word_hider.hpp
include/text_normalizer/: text_normalizer.hpp
include/text_trimmer/: text_trimmer.hpp
include/trie_loader/: trie_loader.hpp
include/utf8_sizer/: utf8_sizer.hpp
include/varying_string_generator/: varying_string_generator.hpp
include/word_finder/: word_finder.hpp
src/: main.cpp  py_main.cpp
src/allowed_characters_loader/: allowed_characters_loader.cpp
src/censor_words_loader/: censor_words_loader.cpp
src/data/: profanity_wordslist.txt
src/data/en/: profanity_wordslist.txt
src/profane_detector/: profane_detector.cpp
src/swear_word_hider/: swear_word_hider.cpp
src/text_normalizer/: text_normalizer.cpp
src/text_trimmer/: text_trimmer.cpp
src/trie_loader/: trie_loader.cpp
src/utf8_sizer/: utf8_sizer.cpp
src/varying_string_generator/: varying_string_generator.cpp
src/word_finder/: word_finder.cpp  word_finder.hpp
tests/: CMakeLists.txt
tests/allowed_characters_loader/: test_allowed_characters_loader.cpp
tests/profane_detector/: test_profane_detector_words.cpp
tests/swear_word_hider/: test_boundary_detector.cpp
tests/text_normalizer/: test_text_normalizer.cpp  test_text_normalizer_collapse_repeats.cpp  test_text_normalizer_remove_letter_fillers.cpp  test_text_normalizer_to_lower.cpp  test_text_normalizer_trim_word_boundaries.cpp
tests/text_trimmer/: test_text_trimmer.cpp
tests/word_finder/: test_word_finder_next_word.cpp
